# shaaft

./: .gitignore  .gitmodules  CMakeLists.txt  Menu.md  README.md  makefile  shaaft-template.html
.github/workflows/: native.yml  webapp.yml  windows.yml
data/: description_file
data/bitmaps/: blackBox.data  menuBoard.data  menuIcons.data  menuShadow.data  menuShadow.font  menuWhite.font  particles.data  scoreBoard.data
data/blocksets/: Basic3.txt  Extended5.txt  Flat3.txt  Flat5.txt  Shaaft.txt  Simple5.txt
data/models/: Cube.model  Indicator.model
data/shaders/: base.frag.glsl  base.vert.glsl  lighting.frag.glsl
data/system/: Menu.xml  config.txt
game/: ActionCallbacks.cpp  ActionCallbacks.hpp  BlockController.cpp  BlockController.hpp  BlockModel.cpp  BlockModel.hpp  BlockView.cpp  BlockView.hpp  CMakeLists.txt  Callback.cpp  Callback.hpp  CallbackManager.cpp  CallbackManager.hpp  Constants.hpp  Context.hpp  EventInjector.hpp  EventWatcher.hpp  Game.cpp  Game.hpp  GameState.cpp  GameState.hpp  Input.cpp  Input.hpp  InterceptorI.hpp  Keys.cpp  Keys.hpp  Makefile.am  MenuManager.cpp  MenuManager.hpp  OnlineScore.cpp  OnlineScore.hpp  ParticleGroup.cpp  ParticleGroup.hpp  ParticleGroupManager.cpp  ParticleGroupManager.hpp  ParticleInfo.hpp  ParticleType.cpp  ParticleType.hpp  Particles.cpp  Particles.hpp  (+20 more)
game/osx/: PostLaunch.mm  PreLaunch.mm
game/win/: PostLaunch.cpp  PreLaunch.cpp
scripts/: build-emscripten.sh  build-linux-no-oem.sh  build.sh  cleanDeployments.py
utils/: CMakeLists.txt  ColorRGB.hpp  Direction.hpp  EventConverter.hpp  FPS.cpp  FPS.hpp  HashString.hpp  PausableTimer.hpp  Point.hpp  Polynomial.cpp  Polynomial.hpp  Quaternion.hpp  ResourceCache.hpp  StringUtils.hpp  Tea.cpp  Tea.hpp  Timer.hpp  Tokenizer.hpp  Trace.cpp  Trigger.hpp  UIInputHandler.hpp  ZeroConf.cpp  ZeroConf.hpp  gettimeofday.hpp
utilscmake/: FindExtras.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  PlatformSetup.cmake
utilsfs/: CMakeLists.txt  Config.cpp  Config.hpp  ConfigHandler.hpp  GetDataPath.cpp  GetDataPath.hpp  ResourceManager.cpp  ResourceManager.hpp  Translator.cpp  Translator.hpp  WalkDirectory.cpp  WalkDirectory.hpp  zStream.cpp  zStream.hpp  zStreamBuffer.cpp  zStreamBuffer.hpp  zrwops.cpp  zrwops.hpp
utilsgl/: BitmapManager.cpp  BitmapManager.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  FontManager.cpp  FontManager.hpp  GLBitmapCollection.cpp  GLBitmapCollection.hpp  GLBitmapFont.cpp  GLExtension.hpp  GLMultiTexture.hpp  GLTexture.cpp  GLTexture.hpp  GLTextureCubeMap.cpp  GLTextureCubeMap.hpp  GLVertexArrayEXT.cpp  GLVertexArrayEXT.hpp  GLVertexBufferObject.cpp  GLVertexBufferObject.hpp  Model.cpp  Model.hpp  ModelManager.hpp  TextureManager.cpp
utilsgl/gl3/: Buffer.cpp  Buffer.hpp  MatrixStack.hpp  Program.cpp  Program.hpp  ProgramManager.cpp  ProgramManager.hpp  Shader.cpp  Shader.hpp  VertexArray.cpp  VertexArray.hpp
utilsrandom/: CMakeLists.txt  R250.cpp  R250.hpp  RandomI.hpp  RandomKnuth.cpp  RandomKnuth.hpp  RandomSFMT.cpp  RandomSFMT.hpp
utilssdl/: Audio.cpp  Audio.hpp  CMakeLists.txt  PNG.cpp  PNG.hpp  SampleManager.cpp  SampleManager.hpp
